# rust-arduino-due-playground

./: Cargo.toml  flash.sh  memory.x  readme.md  rust-toolchain.toml
.cargo/: config.toml
periphery/: Cargo.toml  codegen.sh  readme.md
periphery/src/: lib.rs
periphery/src/adc/: emr.rs  mr.rs  wpmr.rs
periphery/src/can0/: br.rs  mmr0.rs  mmr1.rs  mmr6.rs
periphery/src/can1/: mmr2.rs  mmr3.rs  mmr4.rs  mmr5.rs  mmr7.rs  mr.rs
periphery/src/chipid/: cidr.rs
periphery/src/dacc/: mr.rs
periphery/src/dmac/: cfg0.rs  cfg1.rs  cfg2.rs  cfg3.rs  cfg4.rs  cfg5.rs  ctrla0.rs  ctrla1.rs  ctrla2.rs  ctrla3.rs  ctrla4.rs  ctrla5.rs  ctrlb0.rs  ctrlb1.rs  ctrlb2.rs  ctrlb3.rs  ctrlb4.rs  ctrlb5.rs  gcfg.rs  wpmr.rs
periphery/src/efc1/: fcr.rs
periphery/src/emac/: ncfgr.rs
periphery/src/hsmci/: cmdr.rs  sdcr.rs  wpmr.rs
periphery/src/pmc/: ckgr_mor.rs  pmc_mckr.rs  pmc_pck.rs  pmc_pcr.rs  pmc_wpmr.rs
periphery/src/pwm/: cmr0.rs  cmr1.rs  cmr2.rs  cmr3.rs  cmr4.rs  cmr5.rs  cmr6.rs  cmr7.rs  scm.rs
periphery/src/rstc/: cr.rs  mr.rs  sr.rs
periphery/src/rtc/: cr.rs  sr.rs  wpmr.rs
periphery/src/smc/: cfg.rs  ecc_md.rs  mode0.rs  mode1.rs  mode2.rs  mode3.rs  mode4.rs  mode5.rs  mode6.rs  mode7.rs  wpcr.rs
periphery/src/spi0/: csr.rs  wpmr.rs
periphery/src/ssc/: rcmr.rs  rfmr.rs  tcmr.rs  tfmr.rs  wpmr.rs
periphery/src/supc/: cr.rs  mr.rs  smmr.rs  sr.rs  wuir.rs  wumr.rs
periphery/src/tc0/: cmr2.rs  wave_eq_1_cmr0_wave_eq_1.rs
periphery/src/tc1/: wave_eq_1_cmr1_wave_eq_1.rs  wave_eq_1_cmr2_wave_eq_1.rs  wpmr.rs
src/: main.rs
(+24 files in other folders)
